--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      !function(n) {
+       var e = n.document,
+       t = e.documentElement,
+       i = 640,
+       d = i / 100,
+       o = "orientationchange" in n ? "orientationchange": "resize",
+       a = function() {
+       var n = t.clientWidth || 320;
+       n > 640 && (n = 640),
+       t.style.fontSize = n / d + "px"
+       };
+       e.addEventListener && (n.addEventListener(o, a, !1), e.addEventListener("DOMContentLoaded", a, !1))
+      } (window);
+     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
